# name: TestPushStatus.test[uvloop-None]
  <class 'dict'> {
    'error': None,
    'progress': 23,
    'stage': 'build',
    'state': 'running',
    'step_description': None,
    'step_name': None,
    'timestamp': '2015-10-06T20:00:00Z',
  }
---
# name: TestPushStatus.test_bad_state[uvloop]
  <class 'dict'> {
    'errors': <class 'dict'> {
      'state': <class 'list'> [
        'unallowed value bad',
      ],
    },
    'id': 'invalid_input',
    'message': 'Invalid input',
  }
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-valid]
  <class 'tuple'> (
    201,
    <class 'dict'> {
      'error': <class 'dict'> {
        'details': <class 'list'> [
          'Valid',
        ],
        'traceback': <class 'list'> [
          'Valid',
        ],
        'type': 'KeyError',
      },
      'progress': 14,
      'stage': 'fastqc',
      'state': 'error',
      'step_description': None,
      'step_name': None,
      'timestamp': '2015-10-06T20:00:00Z',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_missing_error[uvloop]
  <class 'tuple'> (
    400,
    <class 'dict'> {
      'id': 'bad_request',
      'message': 'Missing error information',
    },
  )
---
# name: TestPushStatus.test_name_and_description[uvloop]
  <class 'dict'> {
    'error': None,
    'progress': 14,
    'stage': 'fastqc',
    'state': 'running',
    'step_description': 'Run FastQC on the raw data',
    'step_name': 'FastQC',
    'timestamp': '2015-10-06T20:00:00Z',
  }
---
# name: test_acquire[uvloop-None]
  <class 'dict'> {
    'acquired': True,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'key': 'key',
    'mem': 16,
    'proc': 10,
    'progress': 3,
    'stage': None,
    'state': 'preparing',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0.091,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1.0,
        'stage': 'import_results',
        'state': 'complete',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 3,
        'stage': None,
        'state': 'preparing',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
    'workflow': 'build_index',
  }
---
# name: test_archive[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'archived': True,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'mem': 16,
    'proc': 10,
    'progress': 1.0,
    'stage': 'import_results',
    'state': 'complete',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0.091,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1.0,
        'stage': 'import_results',
        'state': 'complete',
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
    'workflow': 'build_index',
  }
---
# name: test_cancel[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'mem': 16,
    'proc': 10,
    'progress': 0.091,
    'stage': 'mk_analysis_dir',
    'state': 'running',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0.091,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
    'workflow': 'build_index',
  }
---
# name: test_find[uvloop]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 1,
      },
      'complete': <class 'dict'> {
        'create_sample': 1,
        'nuvs': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-07-31T04:37:58Z',
        'id': 'sk1wj693',
        'progress': 82,
        'rights': <class 'dict'> {
        },
        'stage': 'first',
        'state': 'complete',
        'status': <class 'list'> [
          <class 'dict'> {
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2019-07-31T04:37:58Z',
          },
          <class 'dict'> {
            'progress': 5,
            'stage': None,
            'state': 'preparing',
            'timestamp': '2019-07-31T14:03:34Z',
          },
          <class 'dict'> {
            'progress': 70,
            'stage': 'first',
            'state': 'running',
            'timestamp': '2019-08-01T07:45:05Z',
          },
          <class 'dict'> {
            'progress': 82,
            'stage': 'first',
            'state': 'complete',
            'timestamp': '2019-08-01T16:06:33Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2018-08-22T02:49:18Z',
        'id': 'v68r5j2t',
        'progress': 81,
        'rights': <class 'dict'> {
        },
        'stage': 'first',
        'state': 'cancelled',
        'status': <class 'list'> [
          <class 'dict'> {
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2018-08-22T02:49:18Z',
          },
          <class 'dict'> {
            'progress': 12,
            'stage': None,
            'state': 'preparing',
            'timestamp': '2018-08-23T05:23:38Z',
          },
          <class 'dict'> {
            'progress': 21,
            'stage': 'first',
            'state': 'running',
            'timestamp': '2018-08-23T11:24:17Z',
          },
          <class 'dict'> {
            'progress': 81,
            'stage': 'first',
            'state': 'cancelled',
            'timestamp': '2018-08-23T13:57:08Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-10-17T07:23:48Z',
        'id': 'zc7h2ftd',
        'progress': 100,
        'rights': <class 'dict'> {
        },
        'stage': 'first',
        'state': 'cancelled',
        'status': <class 'list'> [
          <class 'dict'> {
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2016-10-17T07:23:48Z',
          },
          <class 'dict'> {
            'progress': 92,
            'stage': None,
            'state': 'preparing',
            'timestamp': '2016-10-18T13:59:00Z',
          },
          <class 'dict'> {
            'progress': 98,
            'stage': 'first',
            'state': 'running',
            'timestamp': '2016-10-18T13:59:37Z',
          },
          <class 'dict'> {
            'progress': 100,
            'stage': 'first',
            'state': 'cancelled',
            'timestamp': '2016-10-18T18:29:10Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2020-04-27T15:20:30Z',
        'id': '8vvqvnuk',
        'progress': 90,
        'rights': <class 'dict'> {
        },
        'stage': 'first',
        'state': 'complete',
        'status': <class 'list'> [
          <class 'dict'> {
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2020-04-27T15:20:30Z',
          },
          <class 'dict'> {
            'progress': 62,
            'stage': None,
            'state': 'preparing',
            'timestamp': '2020-04-27T19:18:44Z',
          },
          <class 'dict'> {
            'progress': 81,
            'stage': 'first',
            'state': 'running',
            'timestamp': '2020-04-28T15:22:59Z',
          },
          <class 'dict'> {
            'progress': 90,
            'stage': 'first',
            'state': 'complete',
            'timestamp': '2020-04-28T17:39:18Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-08-03T16:06:20Z',
        'id': '7467tozj',
        'progress': 95,
        'rights': <class 'dict'> {
        },
        'stage': 'first',
        'state': 'cancelled',
        'status': <class 'list'> [
          <class 'dict'> {
            'progress': 0,
            'stage': None,
            'state': 'waiting',
            'timestamp': '2017-08-03T16:06:20Z',
          },
          <class 'dict'> {
            'progress': 4,
            'stage': None,
            'state': 'preparing',
            'timestamp': '2017-08-04T14:24:57Z',
          },
          <class 'dict'> {
            'progress': 88,
            'stage': 'first',
            'state': 'running',
            'timestamp': '2017-08-04T19:09:00Z',
          },
          <class 'dict'> {
            'progress': 95,
            'stage': 'first',
            'state': 'cancelled',
            'timestamp': '2017-08-04T19:46:43Z',
          },
        ],
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 5,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 5,
  }
---
# name: test_find_beta[uvloop-None-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'aodp': 1,
        'build_index': 1,
        'create_sample': 1,
        'create_subtraction': 3,
        'nuvs': 1,
        'pathoscope': 3,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-08-01T16:06:33Z',
        'id': 'sk1wj693',
        'progress': 82,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2020-04-28T17:39:18Z',
        'id': '8vvqvnuk',
        'progress': 90,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-08-04T19:46:43Z',
        'id': '7467tozj',
        'progress': 95,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2018-11-01T00:50:53Z',
        'id': 'awvuon9b',
        'progress': 66,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2016-11-11T13:46:08Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2020-11-02T04:27:01Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2020-03-18T15:01:25Z',
        'id': 't894ea8p',
        'progress': 94,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-10-27T03:43:20Z',
        'id': '5k9d4ocj',
        'progress': 97,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2016-12-27T17:04:58Z',
        'id': 'bhjlnu44',
        'progress': 100,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
    ],
  }
---
# name: test_find_beta[uvloop-None-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'aodp': 1,
        'build_index': 1,
        'create_sample': 1,
        'create_subtraction': 3,
        'nuvs': 1,
        'pathoscope': 3,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-08-01T16:06:33Z',
        'id': 'sk1wj693',
        'progress': 82,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2018-08-23T13:57:08Z',
        'id': 'v68r5j2t',
        'progress': 81,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-10-18T18:29:10Z',
        'id': 'zc7h2ftd',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2020-04-28T17:39:18Z',
        'id': '8vvqvnuk',
        'progress': 90,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-08-04T19:46:43Z',
        'id': '7467tozj',
        'progress': 95,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-11-01T12:19:26Z',
        'id': 'wrw4i0eh',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2018-11-01T00:50:53Z',
        'id': 'awvuon9b',
        'progress': 66,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-08-29T13:59:32Z',
        'id': 'w4cckpcq',
        'progress': 51,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2016-11-11T13:46:08Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-02-13T00:49:45Z',
        'id': '4jua0mbk',
        'progress': 99,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2020-02-07T23:59:24Z',
        'id': '3cvzfiqz',
        'progress': 85,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2020-11-02T04:27:01Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2020-03-18T15:01:25Z',
        'id': 't894ea8p',
        'progress': 94,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-10-27T03:43:20Z',
        'id': '5k9d4ocj',
        'progress': 97,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2016-12-27T17:04:58Z',
        'id': 'bhjlnu44',
        'progress': 100,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
    ],
  }
---
# name: test_find_beta[uvloop-None-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'aodp': 1,
        'build_index': 1,
        'create_sample': 1,
        'create_subtraction': 3,
        'nuvs': 1,
        'pathoscope': 3,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': True,
        'created_at': '2018-08-23T13:57:08Z',
        'id': 'v68r5j2t',
        'progress': 81,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-10-18T18:29:10Z',
        'id': 'zc7h2ftd',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-11-01T12:19:26Z',
        'id': 'wrw4i0eh',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-08-29T13:59:32Z',
        'id': 'w4cckpcq',
        'progress': 51,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-02-13T00:49:45Z',
        'id': '4jua0mbk',
        'progress': 99,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2020-02-07T23:59:24Z',
        'id': '3cvzfiqz',
        'progress': 85,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
    ],
  }
---
# name: test_find_beta[uvloop-running-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'aodp': 1,
        'build_index': 1,
        'create_sample': 1,
        'create_subtraction': 3,
        'nuvs': 1,
        'pathoscope': 3,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2016-11-11T13:46:08Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2020-11-02T04:27:01Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
    ],
  }
---
# name: test_find_beta[uvloop-running-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'aodp': 1,
        'build_index': 1,
        'create_sample': 1,
        'create_subtraction': 3,
        'nuvs': 1,
        'pathoscope': 3,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2016-11-11T13:46:08Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2020-11-02T04:27:01Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
    ],
  }
---
# name: test_find_beta[uvloop-running-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'aodp': 1,
        'build_index': 1,
        'create_sample': 1,
        'create_subtraction': 3,
        'nuvs': 1,
        'pathoscope': 3,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
  }
---
# name: test_get[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'mem': 16,
    'proc': 10,
    'progress': 1.0,
    'stage': 'import_results',
    'state': 'complete',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0.091,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1.0,
        'stage': 'import_results',
        'state': 'complete',
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
    'workflow': 'build_index',
  }
---
